Bug 163060 - Unexpected word breaks at the ends of lines
Summary: Unexpected word breaks at the ends of lines
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.1.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0 target:24.8.3 target:24...
Keywords: bibisected, bisected, regression
: 162084 162173 163039 (view as bug list)
Depends on:
Blocks: DOCX-Smart-Justify
  Show dependency treegraph
 
Reported: 2024-09-20 09:15 UTC by tuefue
Modified: 2025-08-29 14:29 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Test document (15.47 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-09-20 09:16 UTC, tuefue
Details
Screenshot (28.95 KB, image/png)
2024-09-20 09:16 UTC, tuefue
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tuefue 2024-09-20 09:15:27 UTC
Description:
Sometimes Writer splits words at line boundaries.

Steps to Reproduce:
Open test document (attached) to see. 


Actual Results:
See attached screenshot. Word ("pumping") at the end of the firs line splitted in 2 parts ("p" and "umping"). It is marked with red arrows.

Expected Results:
Do not split words.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 24.8.1.2 (X86_64) / LibreOffice Community
Build ID: 480(Build:2)
CPU threads: 12; OS: Linux 6.10; UI render: default; VCL: kf6 (cairo+xcb)
Locale: en-GB (ru_RU.UTF-8); UI: ru-RU
Calc: threaded
Comment 1 tuefue 2024-09-20 09:16:03 UTC
Created attachment 196557 [details]
Test document
Comment 2 tuefue 2024-09-20 09:16:34 UTC
Created attachment 196558 [details]
Screenshot
Comment 3 Xisco Faulí 2024-09-20 10:14:52 UTC
Regression introduced by:

commit 53de98b29548ded88e0a44c80256fc5e340d551e	[log]
author	László Németh <nemeth@numbertext.org>	Thu Nov 23 14:01:10 2023 +0100
committer	László Németh <nemeth@numbertext.org>	Mon Nov 27 14:48:19 2023 +0100
tree d6f7caadb73c76f06d22d10455d3a16ff01a3742
parent c56d0355b742aa0afb17c0370997610d24d9554f [diff]

tdf#158333 sw smart justify: fix multiple text portions

Bisected with: linux-64-24.2
Comment 4 László Németh 2024-09-25 21:45:40 UTC
*** Bug 162173 has been marked as a duplicate of this bug. ***
Comment 5 László Németh 2024-09-25 22:23:22 UTC
Proposed fix: https://gerrit.libreoffice.org/c/core/+/173961
Comment 6 Commit Notification 2024-09-26 07:03:13 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7a78be5090d2dabf03e18471ba718f2c4f25f740

tdf#163060 sw smart justify: fix unwanted line break inside words

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 László Németh 2024-09-26 08:05:33 UTC
Fixed in master, started to back-port to 24.8 and 24.2.

Commit description:

tdf#163060 sw smart justify: fix unwanted line break inside words

End-of-line narrow line portion was broken into the
following line, despite that it was inside a word,
if the remaining free space for the line portion
was negative in the line (GetLineWidth()), because
of missing calculation with the extra available
line width resulted by space shrinking.
Comment 8 László Németh 2024-09-26 08:05:54 UTC
@tuefue and all: many thanks for the bug report and feedback!
Comment 9 BogdanB 2024-09-29 12:39:09 UTC
Verified. Thanks, László.

Good in
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0e955c4b236bcf9e66e7b49cc3ae285f1a4a9e32
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Bad in (for reference)
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0e955c4b236bcf9e66e7b49cc3ae285f1a4a9e32
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 10 László Németh 2024-09-29 19:12:07 UTC
(In reply to BogdanB from comment #9)
> Verified. Thanks, László.
> 

@Bogdan: many thanks for the verification!
Comment 11 Commit Notification 2024-10-04 07:33:10 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/654f913f567db163c06e7388b59b3844fe81a11a

tdf#163060 sw smart justify: fix unwanted line break inside words

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 László Németh 2024-10-18 06:08:09 UTC
*** Bug 163039 has been marked as a duplicate of this bug. ***
Comment 13 Justin L 2024-10-18 14:05:02 UTC
*** Bug 162084 has been marked as a duplicate of this bug. ***
Comment 14 Commit Notification 2024-10-25 14:08:30 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/04c73e4532ab3993f2ec91c42fc5d1cc424d685d

tdf#163060 sw smart justify: fix unwanted line break inside words

It will be available in 24.2.8.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2024-10-28 13:03:59 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-7":

https://git.libreoffice.org/core/commit/f6719cc1b89c13636b440e58297d41f86f169f03

tdf#163060 sw smart justify: fix unwanted line break inside words

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.