tdf#163060 sw smart justify: fix unwanted line break inside words

End-of-line narrow line portion was broken into the
following line, despite that it was inside a word,
if the remaining free space for the line portion
was negative in the line (GetLineWidth()), because
of missing calculation with the extra available
line width resulted by space shrinking.

Regression from commit 53de98b29548ded88e0a44c80256fc5e340d551e
"tdf#158333 sw smart justify: fix multiple text portions".

Change-Id: I802b8469c82250be7ac6f3a73a4dc457deb72a19
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173961
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 7a78be5090d2dabf03e18471ba718f2c4f25f740)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173919
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>