sw/source/core/text/itrform2.cxx
@@ -2122,6 +2122,7 @@ TextFrameIndex SwTextFormatter::FormatLine(TextFrameIndex const nStartPos)
                     }
                 }
                 GetInfo().ResetMaxWidthDiff();
+                GetInfo().SetExtraSpace(0);
 
                 // delete old rest
                 if ( GetInfo().GetRest() )
